# detection

./: CMakeLists.txt  LICENSE  package.xml
arduino/: brightness-chatter.ino
arduino/brightness-usb/: brightness-usb.ino
config/apriltag/: tags.yaml
config/detection/: general.yaml
include/detection/: brightness_analyser.hpp  filtered_camera.hpp
launch/: apriltag.launch  detection.launch  infrared_openni2.launch  only_camera.launch  only_infrared.launch  only_rgb.launch  openni2.launch
launch/includes/: device.launch.xml
src/: analyser.cpp  brightness_analyser.cpp  brightness_analyser_node.cpp  filter.cpp  filtered_camera.cpp  filtered_camera_node.cpp  new_camera.cpp  synchronizer.cpp
