<?xml version="1.0"?>
<package format="2">
  <name>detection</name>
  <version>0.0.0</version>
  <description>The detection package</description>

  <maintainer email="humboldt@todo.todo">Hernán Valdés</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>openni2_camera</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>openni2_camera</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>usbutils</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
